--- a/App-test-csharp/FrmLogin.xaml
+++ b/App-test-csharp/FrmLogin.xaml
@@ -31,7 +31,16 @@
                 </TabItem>
                 <TabItem Header="SIGN UP">
                     <Grid Background="#121F3D">
-
+                        <Label Content="SIGN UP" HorizontalAlignment="Center" Margin="0,21,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Arial Black" FontSize="20"/>
+                        <Label Content="Username" HorizontalAlignment="Left" Margin="27,77,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Arial Black" FontSize="18" RenderTransformOrigin="0.451,0.187"/>
+                        <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="270" Height="20" Margin="27,123,0,0"/>
+                        <Label Content="Carnet" HorizontalAlignment="Left" Margin="27,162,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Arial Black" FontSize="18"/>
+                        <TextBox HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="270" Height="20" Margin="27,208,0,0"/>
+                        <Label Content="Password" HorizontalAlignment="Left" Margin="27,242,0,0" VerticalAlignment="Top" Foreground="White" FontFamily="Arial Black" FontSize="18"/>
+                        <PasswordBox HorizontalAlignment="Left" Margin="27,288,0,0" VerticalAlignment="Top" Width="270" Height="20"/>
+                        <Button Content="SIGN UP" HorizontalAlignment="Center" Margin="0,362,0,0" VerticalAlignment="Top" Width="130" Height="40"/>
+                        <RadioButton Content="Male" HorizontalAlignment="Left" Margin="254,337,0,0" VerticalAlignment="Top"/>
+                        <RadioButton Content="Female" HorizontalAlignment="Left" Margin="178,337,0,0" VerticalAlignment="Top"/>
                     </Grid>
                 </TabItem>
             </TabControl>
