--- a/App-test-csharp/App.xaml
+++ b/App-test-csharp/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:App_test_csharp"
-             StartupUri="FrmLogin.xaml">
+             StartupUri="View/FrmLogin.xaml">
     <Application.Resources>
          
     </Application.Resources>
